--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,9 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+remappings = [
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+    'murky=lib/murky',
+]
+
+fs_permissions = [{ access = "read-write", path = "./" }]
